v2016-10-11.1
  * vim:
      为YouCompleteMe 添加JavaScript 和Rust 支持

v2016-10-11
  * vim:
      0x23..0x26, 0x40 不在作为单词的一部分
      YouCompleteMe 使用color_coded/build 目录下的高版本clang 根目录

v2016-10-08
  * bash & zsh:
      为curl 和wget 添加alisa
  * terminator:
      现在~ 也是单词的一部分了

v2016-09-13
  * vim:
      不再显式指定color_coded 调用clang 的-fcolor-diagnostics 参数

v2016-07-12.1
  * pacman:
      增加了几个XferCommand

v2016-07-12
  * bash & zsh:
      修改了alias
  * pacman:
      使用增量更新 \(^o^)/~

v2016-06-28
  * bash & zsh:
      rm/mv/ln/cp 增加-v 选择

v2016-06-28
  * bash & zsh:
      根据GPG 密钥自动配置GIT 仓库环境变量

v2016-06-22
  * nano:
      更新高亮配置

v2016-06-09
  * tmux:
      不再支持鼠标滚屏
      使用默认的Escape 键

v2016-05-23
  * zsh:
      更改了androidenv 的初始化脚本以适应更多系统
  * vim:
      更改了库搜索路径以适应更多系统

v2016-05-21
  * all:
      更改了可能导致配置文件权限不恰当的安装脚本
  * hosts:
      修改了错误的安装路径
  * vim:
      现在检查系统对libtinfo 库的支持

v2016-05-08
  * bash & zsh:
      现在loginTmux 不会attach 到错误的session 了
  * zsh:
      现在有选择的加载第三方插件

v2016-05-06.2
  * bash & zsh:
      修正了loginTmux 无法兼容bash 的问题
  * tmux:
      不再指定默认shell

v2016-05-06
  * bash & zsh:
      单独将tmux 相关的函数拉出一个插件
      在使用SSH 登陆时交互式地试图使用tmux 取代login shell
      简化了reactor.sh

v2016-05-02
  * vim:
      在~/.ycm_extra_conf.py 中添加了内核头文件目录
      禁用syntastic 关闭检查以避免偶尔的退出时卡死

v2016-05-01.2
  * zsh:
      增加插件zsh-autosuggestions

v2016-05-01
  * all:
      修改了初始化脚本的逻辑使之也适用于更新

v2016-04-30.1
  * all:
      现在配置更新的时候不再使用写死的URL 了（只支持HTTP/HTTPS 方式）
  * vim:
      修正了init.sh 中错误的逻辑

v2016-04-30
  * all:
      精简README.md
  * bash & zsh:
      重写了archpkg 和ssh_env
      一些代码做了规范性调整
      重命名ssh_env 为sshenv
      重命名android_env 为androidenv
      重命名profile_upgrade 为profileupdate
      重命名profile_reconf 为profilereconf
  * vim:
      现在profilereconf 会更新并重配vim 插件了

v2016-04-29.6
  * all:
      更新了README.md

v2016-04-29.5
  * all:
      更新了README.md
  * bash & zsh:
      重写了一部分脚本

v2016-04-29.4
  * tmux:
      连接虚拟化主机时，退出tmux 即断开连接
  * bash & zsh:
      重写了一部分脚本

v2016-04-29.3