@@ -1,0 +1,3 @@
+EXTRA_CFLAGS = -Wall -g
+obj-m = arondight_kmodule.o
+
